# zs-config

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.ps1  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: auth_utils.py  dependencies.py  jobs.py  main.py  redirect_app.py  run_ssl.py
api/routers/: admin.py  auth.py  jobs.py  scheduled_tasks.py  ssl.py  system.py  templates.py  tenants.py  zcc.py  zdx.py  zia.py  zid.py  zpa.py
api/schemas/: zia.py  zpa.py
cli/: banner.py  scroll_view.py  session.py  update_checker.py  z_config.py  zscaler-cli.py
cli/menus/: __init__.py  main_menu.py  plugin_menu.py  snapshots_menu.py  zcc_menu.py  (+4 more)
config/: zscaler-oneapi.conf
db/: database.py  models.py
lib/: auth.py  conf_writer.py  crypto.py  defaults.py  github_auth.py  plugin_manager.py  rate_limiter.py  zcc_client.py  zdx_client.py  zia_client.py  zidentity_client.py  zpa_client.py
notes/: custom_app_bypass_api.md
scripts/: dump_tenant_creds.py  export_tui_db.sh  setup.py
services/: audit_service.py  config_service.py  encryption_service.py  scheduled_sync_engine.py  scheduled_task_service.py  snapshot_service.py  ssl_service.py  template_service.py  update_notify_service.py  zcc_import_service.py  zcc_service.py  zcc_snapshot_service.py  zdx_service.py  zia_firewall_service.py  zia_import_service.py  zia_push_service.py  zia_service.py  zidentity_service.py  zpa_import_service.py  zpa_policy_service.py  zpa_push_service.py  zpa_segment_service.py  zpa_service.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+57 files in other folders)
